# Jarpo

./: README.md  compose.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/build_tools/: mapping.rs  mappings_v2.rs  maven.rs  mod.rs  patches.rs  spigot.rs
backend/src/models/: build_tools.rs  errors.rs  mod.rs  versions.rs
backend/src/utils/: build_tools.rs  cmd.rs  constants.rs  files.rs  git.rs  hash.rs  java.rs  macros.rs  mapping.rs  mod.rs  net.rs  versions.rs  zip.rs
backend/test/: .gitignore
backend/test/spigot/: 1.10.json  1.11.json  1.12.json  1.13.json  1.14.json  1.15.json  1.16.1.json  1.17.json  1.18.json  1.19.json  1.8.json  1.9.json  latest.json
